<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView android:text="@string/createaccounttitle"
		android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:gravity="center_vertical|center_horizontal" android:padding="5dip"></TextView>

	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/tableLayout1"
		android:paddingLeft="30dip" android:paddingRight="30dip"
		android:paddingBottom="5dip" android:paddingTop="5dip">
		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/createaccountid" android:id="@+id/textView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center_horizontal"></TextView>
			<EditText android:id="@+id/editText1" android:layout_width="wrap_content"
				android:layout_weight="1" android:layout_height="wrap_content">
				<requestFocus></requestFocus>
			</EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/createaccountpassword"
				android:id="@+id/textView1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="center_horizontal"
				android:paddingBottom="5dip" android:paddingTop="5dip"
				android:paddingLeft="10dip" android:paddingRight="10dip"></TextView>
			<EditText android:id="@+id/editText1" android:layout_width="wrap_content"
				android:layout_weight="1" android:layout_height="wrap_content">
			</EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/createaccountcheckpassword"
				android:id="@+id/textView2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="center_horizontal"></TextView>
			<EditText android:id="@+id/editText2" android:layout_width="wrap_content"
				android:layout_weight="1" android:inputType="textPassword"
				android:layout_height="wrap_content"></EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/createaccountemail"
				android:id="@+id/textView2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="center_horizontal"></TextView>
			<EditText android:id="@+id/editText3" android:inputType="textEmailAddress"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:layout_width="wrap_content"></EditText>
		</TableRow>
	</TableLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/linearLayout5" android:layout_width="fill_parent"
		android:gravity="center_horizontal">
		<Button android:text="@string/createaccountcreate" android:id="@+id/button1"
			android:layout_height="wrap_content" android:layout_width="100dip"></Button>
		<Button android:text="@string/createaccountcancel" android:id="@+id/button2"
			android:layout_height="wrap_content" android:layout_width="100dip"></Button>
	</LinearLayout>
</LinearLayout>
