<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView android:text="@string/logintitle"
		android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:gravity="center_vertical|center_horizontal" android:padding="5dip"></TextView>

	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/tableLayout1"
		android:paddingLeft="30dip" android:paddingRight="30dip"
		android:paddingBottom="5dip" android:paddingTop="5dip">
		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/loginid" android:id="@+id/textView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center_horizontal"></TextView>
			<EditText android:id="@+id/loginuseridedtxt" android:layout_width="wrap_content"
				android:layout_weight="1" android:layout_height="wrap_content">
				<requestFocus></requestFocus>
			</EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:text="@string/loginpassword" android:id="@+id/textView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center_horizontal" android:paddingBottom="5dip"
				android:paddingTop="5dip" android:paddingLeft="10dip"
				android:paddingRight="10dip"></TextView>
			<EditText android:id="@+id/loginpasswdedtxt" android:layout_width="wrap_content"
				android:layout_weight="1" android:layout_height="wrap_content">
			</EditText>
		</TableRow>
	</TableLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/linearLayout5" android:layout_width="fill_parent"
		android:gravity="center_horizontal">
		<Button android:text="@string/loginlogin" android:id="@+id/loginloginbtn"
			android:layout_height="wrap_content" android:layout_width="100dip"></Button>
		<Button android:text="@string/logincreateaccount" android:id="@+id/logincreateaccountbtn"
			android:layout_height="wrap_content" android:layout_width="100dip"></Button>
	</LinearLayout>
</LinearLayout>
